<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="image">StartImage</string>
    <string name="initial_fragment">Initial Fragment</string>
    <string name="start_btn">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">ExerciseName</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have completed the workout!</string>
    <string name="finish">FINISH</string>
    <string name="yes">YES</string>
    <string name="this_will_stop_your_workout">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">NO</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="us_units">US UNITS</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="history">History</string>
    <string name="start">START</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>


</resources>